src/AppOverride.scss
body .App {
  min-height: 100vh;
  height: 100%;
}
.header {
  width: 100%;
}

.navbar {
  width: 100%;
  z-index: 99;
  position: sticky;
  top: 0;
  max-height: 70px;
  border-bottom: 1px solid #eff2f5;
  // padding: 30px 0 40px 0;
  .container-fluid {
    max-width: 1320px;
    display: flex;
    justify-content: flex-start;
    border-bottom: none;
    padding: 0 1.25rem !important;
    background: white;
    row-gap: 20px;
  }
  &.sticky {
    background: white;
    box-shadow: 0 10px 30px 0 rgb(82 63 105 / 8%);
  }
  .nav-item {
    transition: color 0.2s ease, background-color 0.2s ease;
    font-size: 1em;
    padding: 0.5rem;
    &.social {
      padding: 0 5px !important;
    }
    .nav-link {
      margin: 0 !important;
      color: #5e6278;
      font-weight: 500;
      &.active {
        color: #5e6278;
      }
    }

    &:hover {
      background: #eff2f5;
      color: #5e6278;
      border-radius: 0.475em;
    }
    &.active {
      background: #eff2f5;
    }
  }
}
.navbar-nav {
  width: 100%;
  justify-content: flex-end;
  align-items: center !important;
  column-gap: 5px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: #181c32 !important;
}

.hamburger-toggle {
  display: none !important;
  @media (min-width: 991px) {
    display: none !important;
  }
}

#toggler {
  @media (min-width: 992px) {
    display: none !important;
  }
}

.submitButton {
  color: #152b36 !important;
  @media (max-width: 978px){
    margin-bottom: 20px;
  }
}
.container-fluid {
  display: flex;
  align-items: center !important;
}
.ant-badge-count {
  font-size: 8px  !important;
  border-radius: 5px !important;
  font-weight: 600  !important;
  background-color: #00c59c  !important;
}

.inline-icons{
  @media (max-width: 978px){
    margin-bottom: 10px;
  }
}
.navbar-brand{
  display: grid;
  grid-template-columns: minmax(230px, 120px) minmax(400px, 400px);
  grid-template-rows: 1fr;
  column-gap: 10px;
  row-gap: 10px;
  max-width: 660px;
  @media (max-width: 978px){
    max-width: 100%;
    grid-template-columns: auto 30px;
    grid-template-rows: 1fr;
    .input{
      grid-column: 1/3;
    } 
  }
}

.togglers{
  display: flex;
  flex-direction: row-reverse;
  column-gap: 10px;
  align-items: center;
  button{
    margin-bottom: 0 !important;
  }
}

.togglers{
  @media (min-width: 992px) {
    display: none !important;
  }
}

